Sub menu alignment fixed in mobile menu section

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/layout/_header.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/layout/_header.scss
@@ -435,13 +435,9 @@ ul.tabs{
 						}
 					}
 					ul {
-						border-top: 1px solid $white;
+						
 						> li {
-							position: relative;
-                            border-top: 1px solid #ececec;
-							& + li {
-								border-top: 1px solid #ececec;
-							}                            
+							position: relative;                                                  
                            
 							> a {
 								padding: 12px 30px;
